[gd_scene load_steps=5 format=3 uid="uid://lb3oq22iphka"]

[ext_resource type="Theme" uid="uid://dbvpa0vlu34gu" path="res://ui/beat_player.tres" id="1_q05ha"]
[ext_resource type="Script" path="res://addons/rhythmic_animation_player/rhythmic_animation_player_host_control.gd" id="2_gk3x2"]
[ext_resource type="Script" path="res://addons/rhythmic_animation_player/ops/db.gd" id="3_6y6es"]
[ext_resource type="PackedScene" uid="uid://0xf0dcjgbmqj" path="res://addons/inspector/inspector.tscn" id="3_em7m1"]

[node name="BeatPlayerHost" type="MarginContainer"]
offset_left = 9.0
offset_top = 49.0
offset_right = 1519.0
offset_bottom = 388.0
size_flags_horizontal = 3
theme = ExtResource("1_q05ha")
script = ExtResource("2_gk3x2")
save_path = "res://junk/sam2.lol"
root_node = NodePath(".")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.396889, 0.396889, 0.396889, 1)

[node name="DB" type="Node" parent="."]
script = ExtResource("3_6y6es")

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Menu" type="HBoxContainer" parent="V"]
layout_mode = 2

[node name="Save" type="Button" parent="V/Menu"]
layout_mode = 2
text = "Save"

[node name="Play" type="Button" parent="V/Menu"]
layout_mode = 2
text = "Play"

[node name="Debug" type="Button" parent="V/Menu"]
layout_mode = 2
text = "Debug"

[node name="Stop" type="Button" parent="V/Menu"]
layout_mode = 2
text = "Stop"

[node name="New" type="Button" parent="V/Menu"]
layout_mode = 2
text = "New +"

[node name="Duplicate" type="Button" parent="V/Menu"]
auto_translate_mode = 1
layout_mode = 2
text = "Duplicate"

[node name="HSplitContainer" type="HSplitContainer" parent="V"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 1300

[node name="MarginContainer2" type="MarginContainer" parent="V/HSplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Tabs" type="TabContainer" parent="V/HSplitContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_horizontal = 3
drag_to_rearrange_enabled = true

[node name="MarginContainer" type="MarginContainer" parent="V/HSplitContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Inspector" parent="V/HSplitContainer/MarginContainer" instance=ExtResource("3_em7m1")]
unique_name_in_owner = true
layout_mode = 2
visible_properties = Array[StringName]([&"value", &"auto", &"scene", &"method", &"silent", &"title", &"type", &"to_value", &"property", &"condition_ex", &"length", &"time", &"node_path", &"from", &"who", &"reply_a", &"reply_b", &"id", &"camera_position", &"camera_rotation", &"match_viewport_camera_transform", &"tween_ease", &"tween_type", &"is_toggle", &"test", &"enable_from", &"from_value", &"to_value"])

[connection signal="pressed" from="V/Menu/Save" to="." method="_save_pressed"]
[connection signal="pressed" from="V/Menu/Play" to="." method="_play_pressed"]
[connection signal="pressed" from="V/Menu/Debug" to="." method="_debug_pressed"]
[connection signal="pressed" from="V/Menu/Stop" to="." method="_stop_pressed"]
[connection signal="pressed" from="V/Menu/New" to="." method="_new_pressed"]
[connection signal="pressed" from="V/Menu/Duplicate" to="." method="_duplicate_pressed"]
[connection signal="tab_clicked" from="V/HSplitContainer/MarginContainer2/Tabs" to="." method="_tab_clicked"]
